style(css): add cursor pointer styles for buttons in base layer

--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -123,6 +123,13 @@
     }
 }
 
+@layer base {
+    button:not(:disabled),
+    [data-slot="button"]:not(:disabled) {
+        cursor: pointer;
+    }
+}
+
 ::-webkit-scrollbar {
     @apply w-0 h-0;
 }
