--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -3,9 +3,11 @@
 
 @custom-variant dark (&:is(.dark *));
 
-/* https://github.com/unovue/shadcn-vue/blob/dev/apps/www/src/registry/registry-base-colors.ts#L901 */
-
 @theme inline {
+    --radius-sm: calc(var(--radius) - 4px);
+    --radius-md: calc(var(--radius) - 2px);
+    --radius-lg: var(--radius);
+    --radius-xl: calc(var(--radius) + 4px);
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --color-card: var(--card);
@@ -30,10 +32,6 @@
     --color-chart-3: var(--chart-3);
     --color-chart-4: var(--chart-4);
     --color-chart-5: var(--chart-5);
-    --radius-sm: calc(var(--radius) - 4px);
-    --radius-md: calc(var(--radius) - 2px);
-    --radius-lg: var(--radius);
-    --radius-xl: calc(var(--radius) + 4px);
     --color-sidebar: var(--sidebar);
     --color-sidebar-foreground: var(--sidebar-foreground);
     --color-sidebar-primary: var(--sidebar-primary);
@@ -42,103 +40,77 @@
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-ring: var(--sidebar-ring);
-    --color-active: var(--color-neutral-700);
 }
 
 :root {
-    --color-neutral-50: #f1f6fd;
-    --color-neutral-100: #e0eaf9;
-    --color-neutral-200: #c8dbf5;
-    --color-neutral-300: #a2c4ee;
-    --color-neutral-400: #76a3e4;
-    --color-neutral-500: #5584dc;
-    --color-neutral-600: #4168cf;
-    --color-neutral-700: #3451b2;
-    --color-neutral-800: #32489b;
-    --color-neutral-900: #2d3f7b;
-    --color-neutral-950: #20294b;
-
-
-    --background: var(--color-neutral-50);
-    --foreground: var(--color-neutral-950);
-    --card: var(--color-neutral-50);
-    --card-foreground: var(--color-neutral-950);
-    --popover: var(--color-neutral-50);
-    --popover-foreground: var(--color-neutral-950);
-    --primary: var(--color-neutral-900);
-    --primary-foreground: var(--color-neutral-50);
-    --secondary: var(--color-neutral-100);
-    --secondary-foreground: var(--color-neutral-900);
-    --muted: var(--color-neutral-100);
-    --muted-foreground: var(--color-neutral-500);
-    --accent: var(--color-neutral-100);
-    --accent-foreground: var(--color-neutral-900);
-
-    /*--color-red-600*/
-    --destructive: oklch(0.577 0.245 27.325);
-    /*--color-red-600*/
-    --destructive-foreground: oklch(0.577 0.245 27.325);
-
-    --border: var(--color-neutral-200);
-    --input: var(--color-neutral-200);
-    --ring: var(--color-neutral-400);
-
-    /*--color-orange-600*/
-    --chart-1: oklch(0.646 0.222 41.116);
-    /*--color-teal-600*/
-    --chart-2: oklch(0.6 0.118 184.704);
-    /*--color-cyan-900*/
-    --chart-3: oklch(0.398 0.07 227.392);
-    /*--color-amber-400*/
-    --chart-4: oklch(0.828 0.189 84.429);
-    /*--color-amber-500*/
-    --chart-5: oklch(0.769 0.188 70.08);
-
     --radius: 0.625rem;
-
-    --sidebar: var(--color-neutral-50);
-    --sidebar-foreground: var(--color-neutral-950);
-    --sidebar-primary: var(--color-neutral-900);
-    --sidebar-primary-foreground: var(--color-neutral-50);
-    --sidebar-accent: var(--color-neutral-100);
-    --sidebar-accent-foreground: var(--color-neutral-900);
-    --sidebar-border: var(--color-neutral-200);
-    --sidebar-ring: var(--color-neutral-400);
+    --card: oklch(1 0 0);
+    --card-foreground: oklch(0.145 0 0);
+    --popover: oklch(1 0 0);
+    --popover-foreground: oklch(0.145 0 0);
+    --primary: oklch(0.205 0 0);
+    --primary-foreground: oklch(0.985 0 0);
+    --secondary: oklch(0.97 0 0);
+    --secondary-foreground: oklch(0.205 0 0);
+    --muted: oklch(0.97 0 0);
+    --muted-foreground: oklch(0.556 0 0);
+    --accent: oklch(0.97 0 0);
+    --accent-foreground: oklch(0.205 0 0);
+    --destructive: oklch(0.577 0.245 27.325);
+    --destructive-foreground: oklch(0.577 0.245 27.325);
+    --border: oklch(0.922 0 0);
+    --input: oklch(0.922 0 0);
+    --ring: oklch(0.708 0 0);
+    --chart-1: oklch(0.646 0.222 41.116);
+    --chart-2: oklch(0.6 0.118 184.704);
+    --chart-3: oklch(0.398 0.07 227.392);
+    --chart-4: oklch(0.828 0.189 84.429);
+    --chart-5: oklch(0.769 0.188 70.08);
+    --sidebar: oklch(0.985 0 0);
+    --sidebar-foreground: oklch(0.145 0 0);
+    --sidebar-primary: oklch(0.205 0 0);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.97 0 0);
+    --sidebar-accent-foreground: oklch(0.205 0 0);
+    --sidebar-border: oklch(0.922 0 0);
+    --sidebar-ring: oklch(0.708 0 0);
+    --background: oklch(1 0 0);
+    --foreground: oklch(0.145 0 0);
 }
 
 .dark {
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
-    --card: oklch(0.145 0 0);
+    --card: oklch(0.205 0 0);
     --card-foreground: oklch(0.985 0 0);
-    --popover: oklch(0.145 0 0);
+    --popover: oklch(0.205 0 0);
     --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(0.985 0 0);
-    --primary-foreground: var(--color-neutral-900);
+    --primary: oklch(0.922 0 0);
+    --primary-foreground: oklch(0.205 0 0);
     --secondary: oklch(0.269 0 0);
     --secondary-foreground: oklch(0.985 0 0);
     --muted: oklch(0.269 0 0);
     --muted-foreground: oklch(0.708 0 0);
     --accent: oklch(0.269 0 0);
     --accent-foreground: oklch(0.985 0 0);
-    --destructive: oklch(0.396 0.141 25.723);
+    --destructive: oklch(0.704 0.191 22.216);
     --destructive-foreground: oklch(0.637 0.237 25.331);
-    --border: oklch(0.269 0 0);
-    --input: oklch(0.269 0 0);
-    --ring: oklch(0.439 0 0);
+    --border: oklch(1 0 0 / 10%);
+    --input: oklch(1 0 0 / 15%);
+    --ring: oklch(0.556 0 0);
     --chart-1: oklch(0.488 0.243 264.376);
     --chart-2: oklch(0.696 0.17 162.48);
     --chart-3: oklch(0.769 0.188 70.08);
     --chart-4: oklch(0.627 0.265 303.9);
     --chart-5: oklch(0.645 0.246 16.439);
-    --sidebar: var(--color-neutral-900);
+    --sidebar: oklch(0.205 0 0);
     --sidebar-foreground: oklch(0.985 0 0);
     --sidebar-primary: oklch(0.488 0.243 264.376);
     --sidebar-primary-foreground: oklch(0.985 0 0);
     --sidebar-accent: oklch(0.269 0 0);
     --sidebar-accent-foreground: oklch(0.985 0 0);
-    --sidebar-border: oklch(0.269 0 0);
-    --sidebar-ring: oklch(0.439 0 0);
+    --sidebar-border: oklch(1 0 0 / 10%);
+    --sidebar-ring: oklch(0.556 0 0);
 }
 
 @layer base {
@@ -146,25 +118,18 @@
         @apply border-border outline-ring/50;
     }
 
-    body {
-        @apply bg-white text-foreground font-mono m-0 p-0 leading-[inherit] w-screen h-screen;
-        /*--color-bg-5: var(--color-neutral-700) !important;*/
-        /*--primary-6 : var(--color-neutral-900) !important;*/
-    }
-
     #__nuxt {
-        @apply w-full h-full;
+        @apply flex grow;
+    }
+}
+
+@layer base {
+    button:not(:disabled),
+    [data-slot="button"]:not(:disabled) {
+        cursor: pointer;
     }
 }
 
 ::-webkit-scrollbar {
     @apply w-0 h-0;
-}
-
-.arco-tooltip-content, .arco-tooltip-popup-arrow {
-    background-color: theme('colors.active') !important;
-}
-
-.arco-tooltip-content {
-    color: var(--color-neutral-50) !important;
 }
